# ia-cliente-servidor

./: README.md  main.py  pyproject.toml  requirements.txt
async_impl/: README.md  __init__.py  async_grads_cliente.py  async_grads_server.py  async_weights_cliente.py  async_weights_server.py
async_sgd/: __init__.py  shard.py
async_sgd/rennala_sgd/: __init__.py  rennala_sgd_server.py  rennala_weights_server.py
async_sgd/sgd/: __init__.py  async_grads_cliente.py  async_grads_server.py  async_weights_cliente.py  async_weights_server.py
cifar10/: client.py  load_data.py  model.py  server.py  train.py
cifar10/async_grads/: README.md  client.py  server.py  shard_scheduler.py  train.py
cifar10/async_weights/: README.md  client.py  server.py  train.py
cifar10/grads/: README.md  client.py  server.py  train.py
cifar10/rennala/: README.md  client.py  server.py  train.py
cifar10/resnet_async_weights/: README.md  client.py  model.py  server.py  train.py
ddp/: __init__.py  async_server.py  client.py  handler_register.py  logger.py  message.py  pickle_utils.py  server.py  shard_scheduler.py
rennala_sgd/: README.md  rennala_sgd_server.py  rennala_weights_server.py
sinc/: __init__.py  shard_sampler.py  sinc_grads_cliente.py  sinc_grads_server.py  sinc_weights_cliente.py  sinc_weights_server.py
sync/: __init__.py  shard_sampler.py  sync_grads_cliente.py  sync_grads_server.py  sync_weights_cliente.py  sync_weights_server.py
tiny_imagenet/: client.py  load_data.py  model.py  report.py  server.py  train.py  wnids.py
utils/: __init__.py  format_time.py  plots.py
(+41 files in other folders)
