[project]
name = "server-param"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]

[tool.black]
line-length = 88

[tool.isort]
line-length = 88
