[project]
name = "server-param"
version = "0.1.0"
description = "Servidor de parametros para datos distrbuidos TCP/IP y PyTorch"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "black>=26.3.1",
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.20.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]

[tool.black]
line-length = 88

[tool.isort]
line-length = 88

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
